--- a/apps/web/public/locales/ar.json
+++ b/apps/web/public/locales/ar.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "مرحبا بكم في ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "مرحبا بكم في ThetaSpace",
   "opensource ai characters": "أحرف تايلندية مفتوحة المصدر",
   "alpha": "ألفا",
   "Create": "إنشاء",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "النماذج",
   "Shop": "متجر",
-  "Get ORP+": "الحصول على ORP+",
+  "Get ThetaSpace+": "الحصول على ThetaSpace+",
   "Community": "المجتمع",
   "Discord": "ديسكورد",
   "My Characters": "أحرف الخاصة بي",
