--- a/apps/web/public/locales/da.json
+++ b/apps/web/public/locales/da.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Velkommen til ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Velkommen til ThetaSpace",
   "opensource ai characters": "opensource ai tegn",
   "alpha": "alfa",
   "Create": "Opret",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modeller",
   "Shop": "Butik",
-  "Get ORP+": "Hent ORP+",
+  "Get ThetaSpace+": "Hent ThetaSpace+",
   "Community": "Fællesskab",
   "Discord": "Uenighed",
   "My Characters": "Mine Tegn",
