--- a/apps/web/public/locales/de.json
+++ b/apps/web/public/locales/de.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Willkommen bei ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Willkommen bei ThetaSpace",
   "opensource ai characters": "opensource ai Zeichen",
   "alpha": "alpha",
   "Create": "Anlegen",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modelle",
   "Shop": "Shop",
-  "Get ORP+": "ORP+ holen",
+  "Get ThetaSpace+": "ThetaSpace+ holen",
   "Community": "Community",
   "Discord": "Discord",
   "My Characters": "Meine Zeichen",
