--- a/apps/web/public/locales/el.json
+++ b/apps/web/public/locales/el.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Καλώς ήρθατε στο ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Καλώς ήρθατε στο ThetaSpace",
   "opensource ai characters": "opensource ai χαρακτήρες",
   "alpha": "άλφα",
   "Create": "Δημιουργία",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Μοντέλα",
   "Shop": "Κατάστημα",
-  "Get ORP+": "Λήψη ORP+",
+  "Get ThetaSpace+": "Λήψη ThetaSpace+",
   "Community": "Κοινότητα",
   "Discord": "Discord",
   "My Characters": "Οι Χαρακτήρες Μου",
