--- a/apps/web/public/locales/es.json
+++ b/apps/web/public/locales/es.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Bienvenido a ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Bienvenido a ThetaSpace",
   "opensource ai characters": "caracteres ai de código abierto",
   "alpha": "alfa",
   "Create": "Crear",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modelos",
   "Shop": "Tienda",
-  "Get ORP+": "Obtener ORP+",
+  "Get ThetaSpace+": "Obtener ThetaSpace+",
   "Community": "Comunidad",
   "Discord": "Discordia",
   "My Characters": "Mis caracteres",
