--- a/apps/web/public/locales/fi.json
+++ b/apps/web/public/locales/fi.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Tervetuloa ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Tervetuloa ThetaSpace",
   "opensource ai characters": "opensource ai merkkiä",
   "alpha": "alfa",
   "Create": "Luo",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Mallit",
   "Shop": "Kauppa",
-  "Get ORP+": "Hanki ORP+",
+  "Get ThetaSpace+": "Hanki ThetaSpace+",
   "Community": "Yhteisö",
   "Discord": "Discord",
   "My Characters": "Omat Merkit",
