--- a/apps/web/public/locales/fr.json
+++ b/apps/web/public/locales/fr.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Bienvenue sur ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Bienvenue sur ThetaSpace",
   "opensource ai characters": "caractères ai opensource",
   "alpha": "alpha",
   "Create": "Créer",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modèles",
   "Shop": "Magasins",
-  "Get ORP+": "Obtenir ORP+",
+  "Get ThetaSpace+": "Obtenir ThetaSpace+",
   "Community": "Communauté",
   "Discord": "Discord.",
   "My Characters": "Mes Personnages",
