--- a/apps/web/public/locales/it.json
+++ b/apps/web/public/locales/it.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Benvenuto in ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Benvenuto in ThetaSpace",
   "opensource ai characters": "caratteri opensource ai",
   "alpha": "alfa",
   "Create": "Crea",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modelli",
   "Shop": "Negozio",
-  "Get ORP+": "Ottieni ORP+",
+  "Get ThetaSpace+": "Ottieni ThetaSpace+",
   "Community": "Community",
   "Discord": "Discord",
   "My Characters": "I Miei Caratteri",
