--- a/apps/web/public/locales/ja.json
+++ b/apps/web/public/locales/ja.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "ThetaSpaces1へようこそ",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "ThetaSpaceへようこそ",
   "opensource ai characters": "オープンソースAIキャラクター",
   "alpha": "アルファ",
   "Create": "作成",
@@ -15,7 +15,7 @@
   "Personas": "ペルソナ",
   "Models": "モデル",
   "Shop": "ショップ",
-  "Get ORP+": "ORP+ を取得する",
+  "Get ThetaSpace+": "ThetaSpace+ を取得する",
   "Community": "コミュニティ",
   "Discord": "Discord",
   "My Characters": "マイキャラクター",
