--- a/apps/web/public/locales/nl.json
+++ b/apps/web/public/locales/nl.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Welkom bij ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Welkom bij ThetaSpace",
   "opensource ai characters": "opensource ai tekens",
   "alpha": "alfabetisch",
   "Create": "Aanmaken",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Model",
   "Shop": "Winkel",
-  "Get ORP+": "Krijg OOR+",
+  "Get ThetaSpace+": "Krijg OOR+",
   "Community": "Gemeenschap",
   "Discord": "Onenigheid",
   "My Characters": "Mijn tekens",
