--- a/apps/web/public/locales/no.json
+++ b/apps/web/public/locales/no.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Velkommen til ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Velkommen til ThetaSpace",
   "opensource ai characters": "opensource ai tegn",
   "alpha": "alpha",
   "Create": "Opprett",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modeller",
   "Shop": "Butikk",
-  "Get ORP+": "Hent ORP+",
+  "Get ThetaSpace+": "Hent ThetaSpace+",
   "Community": "Fellesskap",
   "Discord": "Splid",
   "My Characters": "Mine tegn",
