--- a/apps/web/public/locales/pl.json
+++ b/apps/web/public/locales/pl.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Witamy w ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Witamy w ThetaSpace",
   "opensource ai characters": "znaki z opensource",
   "alpha": "alfa",
   "Create": "Utwórz",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modele",
   "Shop": "Sklep",
-  "Get ORP+": "Pobierz ORP+",
+  "Get ThetaSpace+": "Pobierz ThetaSpace+",
   "Community": "Społeczność",
   "Discord": "Discord",
   "My Characters": "Moje znaki",
