--- a/apps/web/public/locales/pt.json
+++ b/apps/web/public/locales/pt.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Bem-vindo ao ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Bem-vindo ao ThetaSpace",
   "opensource ai characters": "caracteres do código-fonte ai",
   "alpha": "Alfa",
   "Create": "Crio",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modelos",
   "Shop": "Comprar",
-  "Get ORP+": "Obter ORP+",
+  "Get ThetaSpace+": "Obter ThetaSpace+",
   "Community": "Comunidade",
   "Discord": "Discord",
   "My Characters": "Meus Caracteres",
