--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Добро пожаловать в ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Добро пожаловать в ThetaSpace",
   "opensource ai characters": "открытые персонажи",
   "alpha": "альфа",
   "Create": "Создать",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Модели",
   "Shop": "Магазин",
-  "Get ORP+": "Получить ORP+",
+  "Get ThetaSpace+": "Получить ThetaSpace+",
   "Community": "Сообщество",
   "Discord": "Discord",
   "My Characters": "Мои символы",
