--- a/apps/web/public/locales/sv.json
+++ b/apps/web/public/locales/sv.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Välkommen till ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Välkommen till ThetaSpace",
   "opensource ai characters": "Opensource ai tecken",
   "alpha": "alfa",
   "Create": "Skapa",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modeller",
   "Shop": "Butik",
-  "Get ORP+": "Skaffa ORP+",
+  "Get ThetaSpace+": "Skaffa ThetaSpace+",
   "Community": "Gemenskap",
   "Discord": "Discord",
   "My Characters": "Mina karaktärer",
