--- a/apps/web/public/locales/uk.json
+++ b/apps/web/public/locales/uk.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "OpenrolePlay.ai",
-  "Welcome to ThetaSpaces1": "Ласкаво просимо в ThetaSpaces1",
+  "ThetaSpaces": "ThetaSpace",
+  "Welcome to ThetaSpace": "Ласкаво просимо в ThetaSpace",
   "opensource ai characters": "символів відкритим початковим кодом",
   "alpha": "альфа",
   "Create": "Створити",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Моделі",
   "Shop": "Крамниця",
-  "Get ORP+": "Отримати ORP+",
+  "Get ThetaSpace+": "Отримати ThetaSpace+",
   "Community": "Спільнота",
   "Discord": "Discord",
   "My Characters": "Мої символи",
@@ -74,7 +74,7 @@
   "Crystals": "Кристали",
   "Get Crystals": "Get Crystals",
   "Crystal Top-Up": "Кристал зверху вгору",
-  "Crystal is an universal currency for calling AI features inThetaSpaces2.": "Кристал - це універсальна валюта для виклику функцій AI вThetaSpaces2.",
+  "Crystal is an universal currency for calling AI features inThetaSpace.": "Кристал - це універсальна валюта для виклику функцій AI вThetaSpace.",
   "Crystal Price": "Кристал ціна",
   "Crystal Price Table": "Кристал прейскуранта",
   "Text models": "Текстові моделі",
