--- a/apps/web/public/locales/zh.json
+++ b/apps/web/public/locales/zh.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "欢迎使用 ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "欢迎使用 ThetaSpace",
   "opensource ai characters": "开源 AI 角色",
   "alpha": "阿尔法",
   "Create": "创建",
@@ -15,7 +15,7 @@
   "Personas": "概况",
   "Models": "模型",
   "Shop": "商店",
-  "Get ORP+": "获取 ORP+",
+  "Get ThetaSpace+": "获取 ThetaSpace+",
   "Community": "社区",
   "Discord": "Discord",
   "My Characters": "我的角色",
