--- a/apps/web/public/locales/cs.json
+++ b/apps/web/public/locales/cs.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Vítejte v ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Vítejte v ThetaSpace",
   "opensource ai characters": "opensource znaky ai",
   "alpha": "alfa",
   "Create": "Vytvořit",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Vzory",
   "Shop": "Obchod",
-  "Get ORP+": "Získat ORP+",
+  "Get ThetaSpace+": "Získat ThetaSpace+",
   "Community": "Komunita",
   "Discord": "Discord",
   "My Characters": "Moje postavy",
