--- a/apps/web/public/locales/ko.json
+++ b/apps/web/public/locales/ko.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "ThetaSpaces1에 오신 것을 환영합니다.",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "ThetaSpace에 오신 것을 환영합니다.",
   "opensource ai characters": "오픈소스 AI 캐릭터",
   "alpha": "알파",
   "Create": "만들기",
@@ -15,7 +15,7 @@
   "Personas": "페르소나",
   "Models": "모델",
   "Shop": "상점",
-  "Get ORP+": "ORP+ 구독",
+  "Get ThetaSpace+": "ThetaSpace+ 구독",
   "Community": "커뮤니티",
   "Discord": "디스코드",
   "My Characters": "내 캐릭터",
