--- a/apps/web/public/locales/ro.json
+++ b/apps/web/public/locales/ro.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Bun venit la ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Bun venit la ThetaSpace",
   "opensource ai characters": "Caractere opensource ai",
   "alpha": "alfa",
   "Create": "Crează",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Modele",
   "Shop": "Magazin",
-  "Get ORP+": "Obține ORP+",
+  "Get ThetaSpace+": "Obține ThetaSpace+",
   "Community": "Comunitate",
   "Discord": "Discord",
   "My Characters": "Caracterele mele",
