--- a/apps/web/public/locales/tr.json
+++ b/apps/web/public/locales/tr.json
@@ -1,6 +1,6 @@
 {
-  "ThetaSpaces1": "ThetaSpaces1",
-  "Welcome to ThetaSpaces1": "Welcome to ThetaSpaces1",
+  "ThetaSpace": "ThetaSpace",
+  "Welcome to ThetaSpace": "Welcome to ThetaSpace",
   "opensource ai characters": "opensource ai characters",
   "alpha": "alpha",
   "Create": "Create",
@@ -15,7 +15,7 @@
   "Personas": "Personas",
   "Models": "Models",
   "Shop": "Shop",
-  "Get ORP+": "Get ORP+",
+  "Get ThetaSpace+": "Get ThetaSpace+",
   "Community": "Community",
   "Discord": "Discord",
   "My Characters": "My Characters",
